<resources>
    <string name="app_name">Session</string>
    <string name="install_url" translatable="false">https://getsession.org/</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="version_s">Version %s</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus">\+%d</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Session and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Session messages and calls...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Session messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Session messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Session your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Session requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Session requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Session requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Session requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="CameraActivity_image_save_failure">Failed to save image.</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="ClearProfileActivity_remove_profile_photo">Remove profile photo?</string>
    <string name="CommunicationActions_no_browser_found">No web browser found.</string>
    <string name="CommunicationActions_a_cellular_call_is_already_in_progress">A cellular call is already in progress.</string>
    <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled Session.</string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">You may wish to verify your safety number with this contact.</string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsCursorLoader_recent_chats">Recent chats</string>
    <string name="ContactsCursorLoader_contacts">Contacts</string>
    <string name="ContactsCursorLoader_groups">Groups</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">Session Call %s</string>
    <string name="ContactNameEditActivity_given_name">Given name</string>
    <string name="ContactNameEditActivity_family_name">Family name</string>
    <string name="ContactNameEditActivity_prefix">Prefix</string>
    <string name="ContactNameEditActivity_suffix">Suffix</string>
    <string name="ContactNameEditActivity_middle_name">Middle name</string>
    <string name="ContactShareEditActivity_type_home">Home</string>
    <string name="ContactShareEditActivity_type_mobile">Mobile</string>
    <string name="ContactShareEditActivity_type_work">Work</string>
    <string name="ContactShareEditActivity_type_missing">Other</string>
    <string name="ContactShareEditActivity_invalid_contact">Selected contact was invalid</string>
    <string name="ConversationItem_error_not_delivered">Send failed, tap for details</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Introducing typing indicators.</string>
    <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Now you can optionally see and share when messages are being typed.</string>
    <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Would you like to enable them now?</string>
    <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Turn on typing indicators</string>
    <string name="ExperienceUpgradeActivity_no_thanks">No thanks</string>
    <string name="RecipientPreferenceActivity_block">Block</string>
    <string name="RecipientPreferenceActivity_unblock">Unblock</string>
    <string name="conversation_context__menu_message_details">Message details</string>
    <string name="conversation_context__menu_copy_text">Copy text</string>
    <string name="conversation_context__menu_delete_message">Delete message</string>
    <string name="conversation_context__menu_resend_message">Resend message</string>
    <string name="conversation_context__menu_reply_to_message">Reply to message</string>
    <string name="conversation_context_image__save_attachment">Save attachment</string>
    <string name="continue_2">Continue</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="activity_landing_title_2">Your Session begins here...</string>
    <string name="activity_landing_register_button_title">Create Session ID</string>
    <string name="activity_landing_restore_button_title">Continue Your Session</string>
    <string name="view_fake_chat_bubble_1">What\'s Session?</string>
    <string name="view_fake_chat_bubble_2">It\'s a decentralized, encrypted messaging app</string>
    <string name="view_fake_chat_bubble_3">So it doesn\'t collect my personal information or my conversation metadata? How does it work?</string>
    <string name="view_fake_chat_bubble_4">Using a combination of advanced anonymous routing and end-to-end encryption technologies.</string>
    <string name="view_fake_chat_bubble_5">Friends don\'t let friends use compromised messengers. You\'re welcome.</string>
    <string name="activity_restore_explanation">Enter the recovery phrase that was given to you when you signed up to restore your account.</string>
    <string name="activity_restore_seed_edit_text_hint">Enter your recovery phrase</string>
    <string name="activity_seed_title_2">Meet your recovery phrase</string>
    <string name="activity_seed_explanation">Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don\'t give it to anyone.</string>
    <string name="activity_seed_reveal_button_title">Hold to reveal</string>
    <string name="activity_create_closed_group_edit_text_hint">Enter a group name</string>
    <string name="activity_create_closed_group_empty_state_message">You don\'t have any contacts yet</string>
    <string name="activity_create_closed_group_empty_state_button_title">Start a Session</string>
    <string name="dialog_seed_title">Your Recovery Phrase</string>
    <string name="dialog_seed_explanation">This is your recovery phrase. With it, you can restore or migrate your Session ID to a new device.</string>
    <string name="activity_conversation_menu_copy_session_id">Copy Session ID</string>
    <string name="details">Details</string>
</resources>