<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/default_dialog_background_inset"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="@dimen/medium_spacing"
    android:paddingRight="32dp"
    android:paddingBottom="@dimen/medium_spacing">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_seed_title"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/medium_font_size" />

    <TextView
        style="@style/SessionIDTextView"
        android:id="@+id/seedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:padding="@dimen/small_spacing"
        tools:text="habitat kiwi amply iceberg dog nerves spiderman soft match partial awakened maximum degrees"
        android:textColor="@color/text"
        android:textSize="@dimen/small_font_size"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:text="@string/dialog_seed_explanation"
        android:textColor="@color/text"
        android:textSize="@dimen/small_font_size"
        android:textAlignment="center"
        android:alpha="0.6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Session.Button.Dialog.Unimportant"
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_button_height"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            style="@style/Widget.Session.Button.Dialog.Unimportant"
            android:id="@+id/copyButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_button_height"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/medium_spacing"
            android:text="@string/copy" />

    </LinearLayout>

</LinearLayout>