<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <org.thoughtcrime.securesms.loki.views.SeedReminderView
        android:id="@+id/seedReminderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/activity_seed_title_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:textSize="14sp"
        android:textColor="@color/text"
        android:text="@string/activity_seed_explanation" />

    <TextView
        style="@style/SessionIDTextView"
        android:id="@+id/seedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:gravity="center"
        android:textSize="14sp"
        android:textAlignment="center"
        tools:text="nautical novelty populate onion awkward bent etiquette plant submarine itches vipers september axis maximum populate" />

    <TextView
        android:id="@+id/revealButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/text"
        android:alpha="0.6"
        android:visibility="gone"
        android:text="@string/activity_seed_reveal_button_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        style="@style/Widget.Session.Button.Common.ProminentOutline"
        android:id="@+id/copyButton"
        android:layout_width="196dp"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginBottom="@dimen/medium_spacing"
        android:text="@string/copy" />

</LinearLayout>