<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#FF2090ea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blurb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/ExperienceUpgradeActivity_introducing_typing_indicators"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            android:textSize="@dimen/onboarding_title_size" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:scaleType="fitCenter"
                android:src="@drawable/circle_tintable" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/message_bubble_background"
                android:tint="@color/signal_primary" />

            <org.thoughtcrime.securesms.components.TypingIndicatorView
                android:id="@+id/typing_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleX="2.5"
                android:scaleY="2.5" />

        </FrameLayout>

        <TextView
            android:id="@+id/subblurb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed"
            android:textColor="@color/core_white"
            android:textIsSelectable="false"
            android:textSize="@dimen/onboarding_subtitle_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/ExperienceUpgradeActivity_would_you_like_to_enable_them_now"
            android:textColor="@color/core_white"
            android:textIsSelectable="false"
            android:textSize="@dimen/onboarding_subtitle_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/experience_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/ExperienceUpgradeActivity_turn_on_typing_indicators"
            android:textColor="@color/core_blue"
            app:backgroundTint="@color/core_white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/experience_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ExperienceUpgradeActivity_no_thanks"
            android:textColor="@color/core_white"
            app:backgroundTint="@color/conversation_blue" />

    </LinearLayout>

</ScrollView>
