<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/fragment_recovery_phrase_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:textSize="@dimen/small_font_size"
        android:textColor="@color/text"
        android:text="@string/activity_restore_explanation" />

    <EditText
        style="@style/SmallSessionEditText"
        android:id="@+id/mnemonicEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:gravity="center_vertical"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:hint="@string/activity_restore_seed_edit_text_hint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        style="@style/Widget.Session.Button.Common.ProminentFilled"
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginLeft="@dimen/massive_spacing"
        android:layout_marginRight="@dimen/massive_spacing"
        android:layout_marginBottom="@dimen/medium_spacing"
        android:text="@string/continue_2" />

</LinearLayout>