<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold"
        android:text="@string/activity_landing_title_2" />
    
    <org.thoughtcrime.securesms.loki.views.FakeChatView
        android:id="@+id/fakeChatView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fake_chat_view_height"
        android:layout_marginTop="@dimen/small_spacing" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        style="@style/Widget.Session.Button.Common.ProminentFilled"
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginLeft="@dimen/massive_spacing"
        android:layout_marginRight="@dimen/massive_spacing"
        android:text="@string/activity_landing_register_button_title" />

    <Button
        style="@style/Widget.Session.Button.Common.ProminentOutline"
        android:id="@+id/restoreButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginLeft="@dimen/massive_spacing"
        android:layout_marginTop="@dimen/small_spacing"
        android:layout_marginRight="@dimen/massive_spacing"
        android:text="@string/activity_landing_restore_button_title" />

    <Button
        android:id="@+id/linkButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboarding_button_bottom_offset"
        android:layout_marginLeft="@dimen/massive_spacing"
        android:layout_marginRight="@dimen/massive_spacing"
        android:gravity="center"
        android:background="@color/transparent"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/activity_link_device_link_device" />

</LinearLayout>