<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/mainContentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/SmallSessionEditText"
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="@dimen/large_spacing"
                android:layout_marginTop="@dimen/medium_spacing"
                android:layout_marginRight="@dimen/large_spacing"
                android:layout_marginBottom="@dimen/medium_spacing"
                android:hint="@string/activity_create_closed_group_edit_text_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:dividerHorizontal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font_size"
            android:textColor="@color/text"
            android:text="@string/activity_create_closed_group_empty_state_message" />

        <Button
            style="@style/Widget.Session.Button.Common.ProminentOutline"
            android:id="@+id/createNewPrivateChatButton"
            android:layout_width="196dp"
            android:layout_height="@dimen/medium_button_height"
            android:layout_marginTop="@dimen/medium_spacing"
            android:text="@string/activity_create_closed_group_empty_state_button_title" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loaderContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A4000000"
        android:visibility="gone"
        android:alpha="0">

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>